track ipynb changes

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -30,10 +30,20 @@
     "import datetime\n",
     "import itertools\n",
     "\n",
+    "from GPUtil import getGPUs\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "import tensorflow as tf\n",
+    "from keras.applications.vgg16 import VGG16\n",
+    "from keras.utils import multi_gpu_model\n",
     "\n",
-    "BATCH_SIZE = 16\n",
-    "LEARNING_RATE = 0.0001\n",
+    "try:\n",
+    "    NUM_GPU = len(getGPUs())\n",
+    "except:\n",
+    "    NUM_GPU = 0\n",
+    "\n",
+    "DATA_DIR = \"data/keras\"\n",
+    "BATCH_SIZE = 16 * max(NUM_GPU, 1)\n",
+    "LEARNING_RATE = 0.0001 * max(NUM_GPU, 1)\n",
     "\n",
     "IMAGE_ROW_SIZE = 584\n",
     "IMAGE_COLUMN_SIZE = 480"
@@ -105,6 +115,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def parallelize_model_maybe(model):\n",
+    "    if NUM_GPU > 0:\n",
+    "        model = multi_gpu_model(model, gpus=NUM_GPU)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.applications.imagenet_utils import preprocess_input\n",
     "\n",
@@ -156,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just fyi, in the following we're only dealing with about 30% of all the images.  That's to ensure we can fit all the cached features in memory.  We generated these lists with `make keras KERAS_TRAIN_PCT=30 KERAS_TEST_PCT=10 KERAS_VALID_PCT=10`"
+    "Just fyi, in the following we're only dealing with about 30% of all the images.  That's to ensure we can fit all the cached features in memory.  We generated these lists with `make keras KERAS_TRAIN_PCT=20 KERAS_TEST_PCT=5 KERAS_VALID_PCT=5`"
    ]
   },
   {
@@ -172,26 +194,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.applications.vgg16 import VGG16\n",
-    "\n",
-    "vgg_model = VGG16(include_top=False, weights=\"imagenet\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We're running this on the big p2.8xlarge instance with 8 GPUs, so let's up the batch size and learning rate."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BATCH_SIZE = 32\n",
-    "LEARNING_RATE = 0.01"
+    "with tf.device(\"/cpu:0\"):\n",
+    "    vgg_model = VGG16(include_top=False, weights=\"imagenet\")\n",
+    "vgg_model = parallelize_model_maybe(vgg_model)"
    ]
   },
   {
@@ -410,14 +415,17 @@
     "def init_model(input_shape, target_num=NUM_CHARACTERS,\n",
     "               learning_rate=LEARNING_RATE, \n",
     "               hidden_width=128, hidden_depth=1, dropout_rate=0.2):\n",
-    "    model = Sequential()\n",
-    "    model.add(Flatten(input_shape=input_shape))\n",
-    "    for _ in range(hidden_depth):\n",
-    "        model.add(Dense(hidden_width, activation='relu', \n",
-    "                        kernel_initializer='lecun_uniform'))\n",
-    "        model.add(Dropout(dropout_rate))\n",
-    "    model.add(Dense(target_num, activation='softmax'))\n",
+    "    with tf.device(\"/cpu:0\"):\n",
+    "        model = Sequential()\n",
+    "        model.add(Flatten(input_shape=input_shape))\n",
+    "        for _ in range(hidden_depth):\n",
+    "            model.add(Dense(hidden_width, activation='relu', \n",
+    "                            kernel_initializer='lecun_uniform'))\n",
+    "            model.add(Dropout(dropout_rate))\n",
+    "        model.add(Dense(target_num, activation='softmax'))\n",
     "\n",
+    "    model = parallelize_model_maybe(model)\n",
+    "    \n",
     "    model.compile(optimizer=Adam(lr=learning_rate),\n",
     "                loss='categorical_crossentropy',\n",
     "                metrics=['accuracy'])\n",
@@ -425,12 +433,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model = init_model(train_data.shape[1:], learning_rate=0.0001, hidden_width=256, hidden_depth=1, dropout_rate=0.2)"
+    "And, finally, start training our model."
    ]
   },
   {
@@ -439,7 +445,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.summary()"
+    "tiny_model = init_model(train_data.shape[1:], learning_rate=0.0001, hidden_width=256, hidden_depth=2, dropout_rate=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiny_model.summary()"
    ]
   },
   {
@@ -450,11 +465,11 @@
    },
    "outputs": [],
    "source": [
-    "training_history = model.fit(train_data_r, train_labels_r,\n",
-    "                             epochs=50,\n",
-    "                             batch_size=BATCH_SIZE,\n",
-    "                             validation_data=(valid_data_r, valid_labels_r),\n",
-    "                             callbacks=[stop_on_val_loss, reduce_lr])"
+    "training_history = tiny_model.fit(train_data_r, train_labels_r,\n",
+    "                                  epochs=50,\n",
+    "                                  batch_size=BATCH_SIZE,\n",
+    "                                  validation_data=(valid_data_r, valid_labels_r),\n",
+    "                                  callbacks=[stop_on_val_loss])"
    ]
   },
   {
@@ -463,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-more-data.h5\"))"
+    "tiny_model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-tiny-model.h5\"))"
    ]
   },
   {
@@ -502,23 +517,26 @@
     "               hidden_width=128, hidden_depth=1, dropout_rate=0.2):\n",
     "    input_shape = (IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, 3)\n",
     "\n",
-    "    # Fine-tune prediction layer\n",
-    "    pretrained_model = VGG16(include_top=False, weights='imagenet',\n",
-    "                             input_shape=input_shape)\n",
-    "    for layer in pretrained_model.layers:\n",
-    "        layer.trainable = False\n",
+    "    with tf.device(\"/cpu:0\"):\n",
+    "        # Fine-tune prediction layer\n",
+    "        pretrained_model = VGG16(include_top=False, weights='imagenet',\n",
+    "                                 input_shape=input_shape)\n",
+    "        for layer in pretrained_model.layers:\n",
+    "            layer.trainable = False\n",
     "\n",
-    "    output_tensor = pretrained_model.output\n",
-    "    output_tensor = Flatten()(output_tensor)\n",
-    "    for _ in range(hidden_depth):\n",
-    "        output_tensor = Dense(hidden_width, activation='relu', \n",
-    "                              kernel_initializer='lecun_uniform')(output_tensor)\n",
-    "        output_tensor = Dropout(dropout_rate)(output_tensor)\n",
-    "    output_tensor = Dense(target_num, activation=\"softmax\", \n",
-    "                          name=\"predictions\")(output_tensor)\n",
+    "        output_tensor = pretrained_model.output\n",
+    "        output_tensor = Flatten()(output_tensor)\n",
+    "        for _ in range(hidden_depth):\n",
+    "            output_tensor = Dense(hidden_width, activation='relu', \n",
+    "                                  kernel_initializer='lecun_uniform')(output_tensor)\n",
+    "            output_tensor = Dropout(dropout_rate)(output_tensor)\n",
+    "        output_tensor = Dense(target_num, activation=\"softmax\", \n",
+    "                              name=\"predictions\")(output_tensor)\n",
     "\n",
-    "    # Define and compile the model\n",
-    "    model = Model(inputs=pretrained_model.input, outputs=output_tensor)\n",
+    "        model = Model(inputs=pretrained_model.input, outputs=output_tensor)\n",
+    "\n",
+    "    model = parallelize_model_maybe(model)\n",
+    "    \n",
     "    model.compile(optimizer=Adam(lr=learning_rate),\n",
     "                  loss=\"categorical_crossentropy\",\n",
     "                  metrics=[\"accuracy\"])\n",
@@ -532,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = init_model(hidden_width=256, hidden_depth=2, dropout_rate=0.2)"
+    "big_model = init_model(hidden_width=256, hidden_depth=2, dropout_rate=0.2)"
    ]
   },
   {
@@ -541,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.summary()"
+    "big_model.summary()"
    ]
   },
   {
@@ -552,12 +570,12 @@
    },
    "outputs": [],
    "source": [
-    "training_history = model.fit_generator(generator=make_generator(\"train\"),\n",
-    "                                       steps_per_epoch=steps_per_epoch(\"train\"),\n",
-    "                                       epochs=50,\n",
-    "                                       validation_data=make_generator(\"valid\"),\n",
-    "                                       validation_steps=steps_per_epoch(\"valid\"),\n",
-    "                                       callbacks=[stop_on_val_loss])"
+    "training_history = big_model.fit_generator(generator=make_generator(\"train\"),\n",
+    "                                           steps_per_epoch=steps_per_epoch(\"train\"),\n",
+    "                                           epochs=50,\n",
+    "                                           validation_data=make_generator(\"valid\"),\n",
+    "                                           validation_steps=steps_per_epoch(\"valid\"),\n",
+    "                                           callbacks=[stop_on_val_loss])"
    ]
   },
   {
@@ -566,7 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-full-model-good-stages-dropout.h5\"))"
+    "big_model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-big-model.h5\"))"
    ]
   }
  ],
@@ -578,6 +596,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
