don’t try to use multiple cpu threads for modeling
I don’t fully understand the implications here, and plus I want to split
over GPUs anyway to achieve good parallelization speed

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -265,8 +265,7 @@
    "outputs": [],
    "source": [
     "train_data = vgg_model.predict_generator(generator_train,\n",
-    "                                         steps=image_count_train_generator_cutoff,\n",
-    "                                         workers=8)\n",
+    "                                         steps=image_count_train_generator_cutoff)\n",
     "train_data = train_data[:image_count_train]"
    ]
   },
@@ -309,8 +308,7 @@
     "valid_labels = np.array(valid_labels[:image_count_valid])\n",
     "\n",
     "valid_data = vgg_model.predict_generator(generator_valid,\n",
-    "                                         steps=image_count_valid_generator_cutoff,\n",
-    "                                         workers=8)\n",
+    "                                         steps=image_count_valid_generator_cutoff)\n",
     "valid_data = valid_data[:image_count_valid]"
    ]
   },
@@ -351,8 +349,7 @@
     "test_labels = np.array(test_labels[:image_count_test])\n",
     "\n",
     "test_data = vgg_model.predict_generator(generator_test,\n",
-    "                                        steps=image_count_test_generator_cutoff,\n",
-    "                                        workers=8)\n",
+    "                                        steps=image_count_test_generator_cutoff)\n",
     "test_data = test_data[:image_count_test]"
    ]
   },
