--- a/smash.ipynb
+++ b/smash.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "DATA_DIR = \"data/keras\"\n",
     "BATCH_SIZE = 16 * max(NUM_GPU, 1)\n",
-    "LEARNING_RATE = 0.0001 * max(NUM_GPU, 1)\n",
+    "LEARNING_RATE = 0.0001\n",
     "\n",
     "IMAGE_ROW_SIZE = 584\n",
     "IMAGE_COLUMN_SIZE = 480"
@@ -409,8 +409,7 @@
     "from keras.optimizers import Adam\n",
     "from keras.layers import Dropout, Flatten, Dense\n",
     "\n",
-    "def init_model(input_shape, target_num=NUM_CHARACTERS,\n",
-    "               learning_rate=LEARNING_RATE, \n",
+    "def build_model(input_shape, target_num=NUM_CHARACTERS,\n",
     "               hidden_width=128, hidden_depth=1, dropout_rate=0.2):\n",
     "    with tf.device(\"/cpu:0\"):\n",
     "        model = Sequential()\n",
@@ -421,6 +420,9 @@
     "            model.add(Dropout(dropout_rate))\n",
     "        model.add(Dense(target_num, activation='softmax'))\n",
     "\n",
+    "    return model\n",
+    "\n",
+    "def compile_model(model, learning_rate=LEARNING_RATE):\n",
     "    model = parallelize_model_maybe(model)\n",
     "    \n",
     "    model.compile(optimizer=Adam(lr=learning_rate),\n",
@@ -442,7 +444,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiny_model = init_model(train_data.shape[1:], learning_rate=0.0001, hidden_width=256, hidden_depth=2, dropout_rate=0.1)"
+    "template_model = build_model(train_data.shape[1:], hidden_width=512, hidden_depth=3, dropout_rate=0.2)\n",
+    "tiny_model = compile_model(template_model)"
    ]
   },
   {
@@ -451,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiny_model.summary()"
+    "template_model.summary()"
    ]
   },
   {
@@ -463,10 +466,10 @@
    "outputs": [],
    "source": [
     "training_history = tiny_model.fit(train_data_r, train_labels_r,\n",
-    "                                  epochs=50,\n",
+    "                                  epochs=15,\n",
     "                                  batch_size=BATCH_SIZE,\n",
     "                                  validation_data=(valid_data_r, valid_labels_r),\n",
-    "                                  callbacks=[stop_on_val_loss])"
+    "                                  callbacks=[stop_on_val_loss, reduce_lr])"
    ]
   },
   {
@@ -475,14 +478,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiny_model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-tiny-model.h5\"))"
+    "template_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-tiny-model.h5\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To test the model we'll need to slap it together with VGG16.  I'll do that tomorrow."
+    "And now we can visualize our progress!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_classes = valid_labels.argmax(1)\n",
+    "pred_classes = tiny_model.predict(valid_data).argmax(1)\n",
+    "class_names = [c for c, i in sorted(generator_valid.class_indices.items(), key=lambda pair: pair[1])]\n",
+    "\n",
+    "c_matrix = confusion_matrix(true_classes, pred_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(c_matrix, class_names, normalize=True)"
    ]
   },
   {
@@ -569,7 +594,7 @@
    "source": [
     "training_history = big_model.fit_generator(generator=make_generator(\"train\"),\n",
     "                                           steps_per_epoch=steps_per_epoch(\"train\"),\n",
-    "                                           epochs=50,\n",
+    "                                           epochs=5,\n",
     "                                           validation_data=make_generator(\"valid\"),\n",
     "                                           validation_steps=steps_per_epoch(\"valid\"),\n",
     "                                           callbacks=[stop_on_val_loss])"
@@ -581,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-big-model.h5\"))"
+    "big_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-big-model.h5\"))"
    ]
   }
  ],
@@ -604,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
