BUG FIX correctly handle CPU -> GPU modeling in the one GPU case

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -35,6 +35,7 @@
     "import tensorflow as tf\n",
     "from keras.applications.vgg16 import VGG16\n",
     "from keras.utils import multi_gpu_model\n",
+    "from keras.models import clone_model\n",
     "\n",
     "try:\n",
     "    NUM_GPU = len(getGPUs())\n",
@@ -116,9 +117,15 @@
    "outputs": [],
    "source": [
     "def parallelize_model_maybe(model):\n",
-    "    if NUM_GPU > 0:\n",
-    "        model = multi_gpu_model(model, gpus=NUM_GPU)\n",
-    "    return model"
+    "    result = None\n",
+    "    if NUM_GPU >= 2:\n",
+    "        result = multi_gpu_model(model, gpus=NUM_GPU)\n",
+    "    elif NUM_GPU == 1:\n",
+    "        with tf.device(\"/gpu:0\"):\n",
+    "            result = clone_model(model)\n",
+    "    else:\n",
+    "        result = model\n",
+    "    return result"
    ]
   },
   {
