rename parallelize_model_maybe -> gpuify_model_maybe

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parallelize_model_maybe(model):\n",
+    "def gpuify_model_maybe(model):\n",
     "    result = None\n",
     "    if NUM_GPU >= 2:\n",
     "        result = multi_gpu_model(model, gpus=NUM_GPU)\n",
@@ -203,7 +203,7 @@
    "source": [
     "with tf.device(\"/cpu:0\"):\n",
     "    vgg_model = VGG16(include_top=False, weights=\"imagenet\")\n",
-    "vgg_model = parallelize_model_maybe(vgg_model)"
+    "vgg_model = gpuify_model_maybe(vgg_model)"
    ]
   },
   {
@@ -430,7 +430,7 @@
     "    return model\n",
     "\n",
     "def compile_model(model, learning_rate=LEARNING_RATE):\n",
-    "    model = parallelize_model_maybe(model)\n",
+    "    model = gpuify_model_maybe(model)\n",
     "    \n",
     "    model.compile(optimizer=Adam(lr=learning_rate),\n",
     "                loss='categorical_crossentropy',\n",
