fixup ipynb big model code

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -542,7 +542,7 @@
     "from keras.models import Model\n",
     "from keras.optimizers import Adam\n",
     "\n",
-    "def init_model(target_num=NUM_CHARACTERS, learning_rate=LEARNING_RATE, \n",
+    "def build_model(target_num=NUM_CHARACTERS, \n",
     "               hidden_width=128, hidden_depth=1, dropout_rate=0.2):\n",
     "    input_shape = (IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, 3)\n",
     "\n",
@@ -563,8 +563,11 @@
     "                              name=\"predictions\")(output_tensor)\n",
     "\n",
     "        model = Model(inputs=pretrained_model.input, outputs=output_tensor)\n",
+    "        \n",
+    "    return model\n",
     "\n",
-    "    model = parallelize_model_maybe(model)\n",
+    "def compile_model(model, learning_rate=LEARNING_RATE):\n",
+    "    model = gpuify_model_maybe(model)\n",
     "    \n",
     "    model.compile(optimizer=Adam(lr=learning_rate),\n",
     "                  loss=\"categorical_crossentropy\",\n",
@@ -579,7 +582,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_model = init_model(hidden_width=256, hidden_depth=2, dropout_rate=0.2)"
+    "template_model = build_model(hidden_width=256, hidden_depth=2, dropout_rate=0.2)\n",
+    "big_model = compile_model(template_model)"
    ]
   },
   {
@@ -588,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_model.summary()"
+    "template_model.summary()"
    ]
   },
   {
@@ -613,7 +617,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-big-model.h5\"))"
+    "template_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-big-model.h5\"))"
    ]
   }
  ],
