--- a/smash.ipynb
+++ b/smash.ipynb
@@ -249,7 +249,6 @@
    "outputs": [],
    "source": [
     "train_labels = []\n",
-    "\n",
     "for i, (_, labels) in enumerate(generator_train_labels):\n",
     "    if i >= image_count_train_generator_cutoff:\n",
     "        break\n",
@@ -501,9 +500,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_classes = valid_labels.argmax(1)\n",
-    "pred_classes = tiny_model.predict(valid_data).argmax(1)\n",
-    "class_names = [c for c, i in sorted(generator_valid.class_indices.items(), key=lambda pair: pair[1])]\n",
+    "true_classes = test_labels.argmax(1)\n",
+    "pred_classes = tiny_model.predict(test_data).argmax(1)\n",
+    "class_names = [c for c, i in sorted(generator_test.class_indices.items(), key=lambda pair: pair[1])]\n",
     "\n",
     "c_matrix = confusion_matrix(true_classes, pred_classes)"
    ]
@@ -582,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_model = build_model(hidden_width=256, hidden_depth=2, dropout_rate=0.2)\n",
+    "template_model = build_model(hidden_width=512, hidden_depth=3, dropout_rate=0.2)\n",
     "big_model = compile_model(template_model)"
    ]
   },
@@ -608,7 +607,7 @@
     "                                           epochs=5,\n",
     "                                           validation_data=make_generator(\"valid\"),\n",
     "                                           validation_steps=steps_per_epoch(\"valid\"),\n",
-    "                                           callbacks=[stop_on_val_loss])"
+    "                                           callbacks=[stop_on_val_loss, reduce_lr])"
    ]
   },
   {
@@ -618,6 +617,28 @@
    "outputs": [],
    "source": [
     "template_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-big-model.h5\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_classes = test_labels.argmax(1)\n",
+    "pred_classes = tiny_model.predict(test_data).argmax(1)\n",
+    "class_names = [c for c, i in sorted(generator_test.class_indices.items(), key=lambda pair: pair[1])]\n",
+    "\n",
+    "c_matrix = confusion_matrix(true_classes, pred_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(c_matrix, class_names, normalize=True)"
    ]
   }
  ],
@@ -640,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
